--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -66,7 +66,7 @@ button:hover {
 /*header index*/
 .hero {
     text-align: center;
-    padding: 100px 20px;
+    padding: 10em 2em;
     background-image: url('/images/backgroundRedDragon.png');
     background-size: cover;
     background-position: center;
