--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <a th:href="@{/}">Home</a>
-            <a th:href="@{/characters}">Characters</a>
-            <a th:href="@{/campaigns}">Campaigns</a>
-            <a th:href="@{/items}">Items</a>
-            <a th:href="@{/monsters}">Monsters</a>
-            <a th:href="@{/quests}">Quests</a>
+<!--            <a th:href="@{/characters}">Characters</a>-->
+<!--            <a th:href="@{/campaigns}">Campaigns</a>-->
+<!--            <a th:href="@{/items}">Items</a>-->
+<!--            <a th:href="@{/monsters}">Monsters</a>-->
+
         </nav>
     </header>
 
