--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>D&D Management System</title>
+    <title>Mythic Mastery</title>
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
