monster service creation

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head th:replace="fragments/commons::head"></head>
+<head th:replace="fragments/commons::head">
+    <title>Mythic Mastery</title>
+</head>
 
 <body>
 <header th:replace="fragments/commons::header"></header>
