--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head"></head>
+<head th:replace="fragments/commons::head">
+    <title>Mythic Mastery</title>
+</head>
 <body>
 <header th:replace="fragments/commons::header"></header>
 <main>
