--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head">
-    <title>Mythic Mastery</title>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>MobiLeLeLe</title>
+    <link rel="stylesheet" href="/css/reset-css.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <script src="/js/jquery-3.5.1.slim.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<header th:replace="fragments/commons::header"></header>
-<main>
-    <div class="hero">
-        <h1>Welcome to Mythic Mastery</h1>
-        <p>Manage your characters, campaigns, items, monsters, and quests all in one place!</p>
-        <a th:href="@{/login}">Log In</a>
-        <a th:href="@{/register}">Register</a>
-    </div>
-</main>
-<footer th:replace="fragments/commons :: footer"></footer>
+
+<div th:replace="~{fragments/navbar::navbar(activeLink=${'home'})}"></div>
+
+
+<div class="container-fluid">
+    <h5 class="text-center text-white mt-5">Welcome to MobiLeLeLe,
+        <th:block th:if="${@currentUser.isLoggedIn()}" th:text="${@currentUser.getFullName()}"></th:block>
+        <th:block th:unless="${@currentUser.isLoggedIn()}">Anonymous</th:block>
+        !
+    </h5>
+</div>
+
+<div>
+    <footer> </footer>
+</div>
+
 </body>
 </html>
