--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head th:replace="fragments/commons::head">
-    <title>Mythic Mastery</title>
+<head>
+    <meta charset="UTF-8">
+    <title>MobiLeLeLe</title>
+    <link rel="stylesheet" href="/css/reset-css.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <script src="/js/jquery-3.5.1.slim.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-<header th:replace="fragments/commons::header"></header>
+
+<div th:replace="~{fragments/navbar::navbar(activeLink=${'login'})}"></div>
 
 <div class="container">
     <h2 class="text-center text-white">Login</h2>
-    <form th:method="POST"
-          th:action="@{/login}">
-
+    <form th:method="post"
+          th:action="@{/users/login}"
+          class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="form-group">
             <label for="username" class="text-white font-weight-bold">Username</label>
             <input value="username"
@@ -45,8 +52,7 @@
 </div>
 
 <div>
-    <footer th:replace="fragments/commons :: footer"></footer>
-
+    <footer> </footer>
 </div>
 </body>
 </html>
