--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head">
-  <title>Mythic Mastery</title>
+
+<head>
+  <meta charset="UTF-8">
+  <title>MobiLeLeLe</title>
+  <link rel="stylesheet" href="/css/reset-css.css"/>
+  <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+  <script src="/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-<header th:replace="fragments/commons::header"></header>
+<div th:replace="~{fragments/navbar::navbar(activeLink=${'register'})}"></div>
 
 <div class="container">
   <h2 class="text-center text-white">Register User</h2>
-  <form th:method="POST"
-        th:action="@{register}"
+  <form th:method="post"
+        th:action="@{/users/register}"
         th:object="${registerData}"
         class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
     <div class="row">
       <div class="form-group col-md-6 mb-3">
         <label th:for="username" class="text-white font-weight-bold">Username</label>
-        <input
-                th:field="*{username}"
+        <input  th:field="*{username}"
                 type="text"
                 class="form-control"
-                id="username"
                 placeholder="Username"/>
+        <!--                <p class="errors alert alert-danger">-->
+        <!--                    First name is required.-->
+        <!--                </p>-->
       </div>
+    </div>
+    <div class="row">
       <div class="form-group col-md-6 mb-3">
         <label th:for="password" class="text-white font-weight-bold">Password</label>
-        <label>
-          <input
-                  th:field="*{password}"
-                  type="password"
-                  class="form-control"
-                  name="password"
-                  placeholder="Password"/>
-        </label>
+        <input
+                th:field="*{password}"
+                type="password"
+                class="form-control"
+                placeholder="Password"/>
         <!--                <p class="errors alert alert-danger">-->
         <!--                    Password is required.-->
         <!--                </p>-->
