--- a/src/main/resources/templates/campaigns.html
+++ b/src/main/resources/templates/campaigns.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MobiLeLeLe</title>
+    <title>Mythic Mastery</title>
     <link rel="stylesheet" href="/css/reset-css.css"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
@@ -18,7 +18,7 @@
 <div class="container-fluid">
     <h2 class="text-center text-white mt-5">All Campaigns</h2>
     <div
-            th:each="offer : ${allCampaigns}"
+            th:each="offer:${allCampaigns}"
             th:object="${campaign}"
             class="offers row mx-auto d-flex flex-row justify-content-center">
         <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0">
