--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en"  xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>MobiLeLeLe</title>
+    <title>Mythic Mastery</title>
     <link rel="stylesheet" href="/css/reset-css.css"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
@@ -24,24 +25,36 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto col-12 justify-content-between">
                 <li class="nav-item">
-                    <a class="nav-link" href="/campaigns/add"  th:classappend="${activeLink == 'add-offer'}? 'active'">Add Campaign</a>
+                    <a th:href="@{/}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campaigns/all" th:classappend="${activeLink == 'all-offers'}? 'active'">All Campaigns</a>
+                    <a class="nav-link" href="/campaigns/all" th:classappend="${activeLink == 'all-campaigns'}? 'active'">All Campaigns</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Admin
+<!--                <li class="nav-item dropdown" sec: sec:authorize="hasRole('ADMIN')">-->
+<!--                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"-->
+<!--                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                        Admin-->
+<!--                    </a>-->
+<!--                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+<!--                        <a class="dropdown-item" href="/">Action</a>-->
+<!--                        <a class="dropdown-item" href="/">Another action</a>-->
+<!--                        <div class="dropdown-divider"></div>-->
+<!--                        <a class="dropdown-item" href="/">Something else here</a>-->
+<!--                    </div>-->
+<!--                </li>-->
+
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" th:href="@{/users/register}"
+                       th:classappend="${activeLink == 'register'}? 'active'">Register</a>
+                </li>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" th:href="@{/users/login}"
+                       th:classappend="${activeLink == 'login'}? 'active'">
+                        Login
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/">Action</a>
-                        <a class="dropdown-item" href="/">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/">Something else here</a>
-                    </div>
                 </li>
-                <li class="nav-item" th:if="${@currentUser.isLoggedIn()}">
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
                              text="Welcome, Gosho"></div>
@@ -50,17 +63,6 @@
                             <input class="btn btn-link" type="submit" value="Logout"/>
                         </form>
                     </div>
-                </li>
-
-                <li class="nav-item" th:unless="${@currentUser.isLoggedIn()}">
-                    <a class="nav-link" href="/users/register"
-                       th:classappend="${activeLink == 'register'}? 'active'">Register</a>
-                </li>
-                <li class="nav-item" th:unless="${@currentUser.isLoggedIn()}">
-                    <a class="nav-link" href="/users/login"
-                       th:classappend="${activeLink == 'login'}? 'active'">
-                        Login
-                    </a>
                 </li>
 
             </ul>
