--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MobiLeLeLe</title>
+  <title>Mythic Mastery</title>
   <link rel="stylesheet" href="/css/reset-css.css"/>
   <link rel="stylesheet" href="/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="/css/main.css"/>
