--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -25,29 +25,16 @@
 
             <div class="card-body pb-1">
                 <h5 class="card-title">
-                    Offer year Brand name Model name</h5>
+                    Name DM Characters Monsters</h5>
             </div>
             <ul class="offer-details list-group list-group-flush">
                 <li class="list-group-item">
-                    <div class="card-text">• Mileage <span th:text="*{mileage}">Mileage</span></div>
-                    <div class="card-text">• Price <span id="price" th:text="*{price}">Price</span></div>
-                    <div class="card-text">• Engine type <span th:text="*{engineType}">Engine type</span></div>
-                    <div class="card-text"><span>• Transmission type</span></div>
-                    <div class="card-text">• Currency
-                        <select id="currency">
-                            <option
-                                    th:each="currency : *{allCurrencies}"
-                                    th:value="${currency}"
-                                    th:selected="${currency} == 'BGN'"
-                                    th:text="${currency}"
-                            >
-
-                            </option>
-                        </select>
-                    </div>
+                    <div class="card-text">• Campaign Name <span th:text="*{name}">Name</span></div>
+                    <div class="card-text">• DM <span id="price" th:text="*{dungeonMaster}">DM</span></div>
+                    <div class="card-text">• Players <span th:text="*{characters}">Players</span></div>
+                    <div class="card-text">• Monsters <span th:text="*{monsters}">Monsters</span></div>
                 </li>
             </ul>
-            <input type="hidden" id="priceInBGN" th:value="*{price}">
             <div class="card-body">
                 <a class="card-link" href="/">Update</a>
                 <form th:method="delete"
