fixes on the whole rebuild - pt2 - added i18n configuration + error handling

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,11 +24,11 @@
         class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
     <div class="row">
       <div class="form-group col-md-6 mb-3">
-        <label th:for="username" class="text-white font-weight-bold">Username</label>
-        <input  th:field="*{username}"
+        <label th:for="name" class="text-white font-weight-bold">Username</label>
+        <input  th:field="*{name}"
                 type="text"
                 class="form-control"
-                placeholder="Username"/>
+                placeholder="Name"/>
         <!--                <p class="errors alert alert-danger">-->
         <!--                    First name is required.-->
         <!--                </p>-->
