--- a/src/main/resources/templates/campaign-add.html
+++ b/src/main/resources/templates/campaign-add.html
@@ -54,9 +54,10 @@
                     rows="3"
                     placeholder="Description">
             </textarea>
-            <p class="invalid-feedback errors alert alert-danger">
-                Description is required and should be at least 5 symbols.
-            </p>
+<!--            <p class="invalid-feedback errors alert alert-danger">-->
+<!--                Description is required and should be at least 5 symbols.-->
+<!--            </p>-->
+            <small th:each="err : ${#fields.errors('description')}" th:text="${err}" class="text-danger"></small>
 
             <!--            <small th:each="err : ${#fields.errors('description')}" th:text="${err}" class="text-danger"></small>-->
 
