--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -22,7 +22,10 @@
                     <a class="nav-link" th:href="@{/}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campaigns/all" th:classappend="${activeLink == 'all-campaigns'}? 'active'">All Campaigns</a>
+                    <a class="nav-link"
+                       th:href="@{/campaigns/all}"
+                       th:classappend="${activeLink == 'all-campaigns'}? 'active'"
+                       th:text="#{nav_bar_all_campaigns}">All Campaigns</a>
                 </li>
 <!--                <li class="nav-item dropdown" sec: sec:authorize="hasRole('ADMIN')">-->
 <!--                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"-->
@@ -39,24 +42,40 @@
 
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/users/register}"
-                       th:classappend="${activeLink == 'register'}? 'active'">Register</a>
+                       th:classappend="${activeLink == 'register'}? 'active'"
+                       th:text="#{nav_bar_login_register}">Register</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/users/login}"
-                       th:classappend="${activeLink == 'login'}? 'active'">
+                       th:classappend="${activeLink == 'login'}? 'active'"
+                       th:text="#{nav_bar_login}">
                         Login
                     </a>
                 </li>
 
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div class="logged-user"
-                             text="Welcome, Gosho"></div>
-                        <form th:method="post"
-                              th:action="@{/users/logout}">
-                            <input class="btn btn-link" type="submit" value="Logout"/>
-                        </form>
-                    </div>
+<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
+<!--                    <div class="form-inline my-2 my-lg-0 border px-3">-->
+<!--                        <div class="logged-user"-->
+<!--                             text="Welcome, Gosho"></div>-->
+<!--                        <form th:method="post"-->
+<!--                              th:action="@{/users/logout}">-->
+<!--                            <input class="btn btn-link" type="submit" value="Logout"/>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </li>-->
+
+                <li class="nav-item">
+                    <form th:method="get">
+                        <label class="text-white" for="lang" th:text="#{nav_bar_language}">Language</label>
+                        <select
+                                id="lang"
+                                name="lang"
+                                onchange="this.form.submit()">
+                            <option value="en_US" th:selected="${#locale.toString()} == 'en_US'">English</option>
+                            <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Български</option>
+                        </select>
+                    </form>
+
                 </li>
 
             </ul>
