--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,13 +20,13 @@
           th:action="@{/users/login}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="form-group">
-            <label for="username" class="text-white font-weight-bold">Username</label>
-            <input value="username"
-                   id="username"
-                   name="username"
+            <label for="name" class="text-white font-weight-bold">Username</label>
+            <input value="name"
+                   id="name"
+                   name="name"
                    type="text"
                    class="form-control"
-                   placeholder="Username"/>
+                   placeholder="Name"/>
         </div>
         <div class="form-group">
             <label for="password" class="text-white font-weight-bold">Password</label>
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col col-md-4">
                 <div class="button-holder d-flex">
-                    <input type="submit" class="btn btn-info btn-lg" value="Submit Offer"/>
+                    <input type="submit" class="btn btn-info btn-lg" value="Log In"/>
                 </div>
             </div>
         </div>
