--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto col-12 justify-content-between">
                 <li class="nav-item">
-                    <a class="nav-link" href="/campaigns/add">Add Campaign</a>
+                    <a class="nav-link" th:href="@{/campaigns/add}">Add Campaign</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campaigns/add/all">All Campaigns</a>
+                    <a class="nav-link" th:href="@{/campaigns/add/all}">All Campaigns</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
@@ -45,15 +45,15 @@
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
                              text="Welcome, Gosho"></div>
-                        <a class="nav-link" href="/users/logout">Logout</a>
+                        <a class="nav-link" th:href="@{/users/logout}">Logout</a>
                     </div>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Register</a>
+                    <a class="nav-link" th:href="@{/users/register}">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/login">Login</a>
+                    <a class="nav-link" th:href="@{/users/login}">Login</a>
                 </li>
 
             </ul>
@@ -63,13 +63,13 @@
 
 
 <div class="container">
-    <h2 class="text-center text-white">Update Offer</h2>
+    <h2 class="text-center text-white">Update Campaign</h2>
     <form method="POST"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
 
             <div class="form-group col-md-6 mb-3">
-                <label class="text-center text-white font-weight-bold" for="model">Model</label>
+                <label class="text-center text-white font-weight-bold" for="model">Name</label>
                 <select id="model" class="form-control">
                     <option value="">- Select a model -</option>
                     <optgroup label="Brand name">
