--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -51,7 +51,7 @@
     <div class="row">
       <div class="col col-md-4">
         <div class="button-holder d-flex">
-          <input type="submit" class="btn btn-info btn-lg" value="Create user"/>
+          <input type="submit" class="btn btn-info btn-lg" value="sign in"/>
         </div>
       </div>
     </div>
