--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,9 @@
 
 
 <div class="container-fluid">
-    <h5 class="text-center text-white mt-5">Mythic Mastery,
+    <h5 class="text-center text-white mt-5">Welcome to Mythic Mastery,
         <th:block th:text="${welcomeMessage}"></th:block>!
+        Here you can manage your dnd characters and campaigns
     </h5>
 </div>
 
