--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -30,9 +30,9 @@
             <ul class="offer-details list-group list-group-flush">
                 <li class="list-group-item">
                     <div class="card-text">• Campaign Name <span th:text="*{name}">Name</span></div>
-                    <div class="card-text">• DM <span id="price" th:text="*{dungeonMaster}">DM</span></div>
-                    <div class="card-text">• Players <span th:text="*{characters}">Players</span></div>
-                    <div class="card-text">• Monsters <span th:text="*{monsters}">Monsters</span></div>
+<!--                    <div class="card-text">• DM <span id="price" th:text="*{dungeonMaster}">DM</span></div>-->
+<!--                    <div class="card-text">• Players <span th:text="*{characters}">Players</span></div>-->
+<!--                    <div class="card-text">• Monsters <span th:text="*{monsters}">Monsters</span></div>-->
                 </li>
             </ul>
             <div class="card-body">
