--- a/src/main/resources/templates/campaigns.html
+++ b/src/main/resources/templates/campaigns.html
@@ -18,7 +18,7 @@
 <div class="container-fluid">
     <h2 class="text-center text-white mt-5">All Campaigns</h2>
     <div
-            th:each="campaign:${allCampaigns}">
+            th:each="campaign  :${allCampaigns}">
 <!--                th:object="${campaign}">-->
             class="offers row mx-auto d-flex flex-row justify-content-center">
         <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0">
@@ -30,14 +30,14 @@
             </div>
             <ul class="offer-details list-group list-group-flush">
                 <li class="list-group-item">
-                    <div class="card-text">• Campaign Name <span th:text="*{campaign.name}">Name</span></div>
+                    <div class="card-text">• Campaign Name <span th:text="*{campaign.name()}">Name</span></div>
 <!--                    <div class="card-text">• DM <span id="price" th:text="*{c.dungeonMaster}">DM</span></div>-->
 <!--                    <div class="card-text">• Players <span th:text="*{c.characters}">Players</span></div>-->
 <!--                    <div class="card-text">• Monsters <span th:text="*{c.monsters}">Monsters</span></div>-->
                 </li>
             </ul>
             <div class="card-body">
-                <a class="card-link" th:href="@{/campaigns/{id}(id=*{campaign.id})}">Details</a>
+                <a class="card-link" th:href="@{/campaigns/{id}(id=*{campaign.id()})}">Details</a>
             </div>
         </div>
     </div>
