--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -54,16 +54,16 @@
                     </a>
                 </li>
 
-<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
-<!--                    <div class="form-inline my-2 my-lg-0 border px-3">-->
-<!--                        <div class="logged-user"-->
-<!--                             text="Welcome, Gosho"></div>-->
-<!--                        <form th:method="post"-->
-<!--                              th:action="@{/users/logout}">-->
-<!--                            <input class="btn btn-link" type="submit" value="Logout"/>-->
-<!--                        </form>-->
-<!--                    </div>-->
-<!--                </li>-->
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <div class="form-inline my-2 my-lg-0 border px-3">
+                        <div class="logged-user"
+                             text="Welcome, Gosho"></div>
+                        <form th:method="post"
+                              th:action="@{/users/logout}">
+                            <input class="btn btn-link" type="submit" value="Logout"/>
+                        </form>
+                    </div>
+                </li>
 
                 <li class="nav-item">
                     <form th:method="get">
