--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">>
 <head>
     <meta charset="UTF-8">
     <title>Mythic Mastery</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <script src="/js/jquery-3.5.1.slim.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+<!--    <link rel="stylesheet" href="/css/reset.css"/>-->
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
-
 <body>
+<header>
+    <div th:replace="~{fragments/navbar :: nav(active=${'index'})}"></div>
+</header>
 
-<div th:replace="~{fragments/navbar::navbar(activeLink=${'home'})}"></div>
+<main class="hero" >
+    <div class="hero-content">
+        <div class="hero-text">
+            <h1>Welcome to Mythic Mastery,  <span sec:authorize="isAuthenticated()" th:text="${#authentication.name}" ></span>
+                                            <span sec:authorize="!isAuthenticated()"> Adventurer</span>
+                !</h1>
+            <p>Your gateway to epic adventures!</p>
+<!--            <a href="/campaigns/all" class="btn-main">Explore Campaigns</a>-->
+            <div class="auth-links">
+                <a sec:authorize="!isAuthenticated()" th:href="@{/users/register}" class="auth-button">Register</a>
+                <a sec:authorize="!isAuthenticated()" th:href="@{/users/login}" class="auth-button">Login</a>
+            </div>
 
+            <form sec:authorize="isAuthenticated()" th:method="post" th:action="@{/users/logout}" class="logout-form auth-button">
+                <input type="submit" value="Logout" class="btn-logout"/>
+            </form>
+        </div>
 
-<div class="container-fluid">
-    <h5 class="text-center text-white mt-5">Welcome to Mythic Mastery,
-        <th:block th:text="${welcomeMessage}"></th:block>!
-        Here you can manage your dnd characters and campaigns
-    </h5>
-</div>
+    </div>
 
-<div>
-    <footer> </footer>
-</div>
-
+<section class="features">
+    <div class="feature">
+        <h2>Manage Characters</h2>
+        <p>Effortlessly keep track of your heroes and their journeys.</p>
+    </div>
+    <div class="feature">
+        <h2>Create Campaigns</h2>
+        <p>Design and manage epic campaigns with ease.</p>
+    </div>
+    <div class="feature">
+        <h2>Join the Adventure</h2>
+        <p>Become part of a vibrant community of adventurers.</p>
+    </div>
+</section>
+</main>
+<footer>
+    <p>&copy; 2024 Mythic Mastery. All rights reserved.</p>
+</footer>
 </body>
 </html>
