--- a/src/main/resources/templates/monsters.html
+++ b/src/main/resources/templates/monsters.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Mythic Mastery</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <script src="/js/jquery-3.5.1.slim.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/reset.css"/>
+
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 
 <body>
