--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mythic Mastery - Register</title>
-  <link rel="stylesheet" href="/css/reset.css"/>
+<!--  <link rel="stylesheet" href="/css/reset.css"/>-->
   <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 
 <body>
-
 <header>
   <div th:replace="~{fragments/navbar :: nav(active=${'register'})}"></div>
 </header>
-
 <main class="hero">
   <h2 class="text-center text-white">Register User</h2>
   <div class="form-center">
