--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
                 <div class="form-group mb-3">
                     <label th:for="name" class="text-white font-bold">Username:</label>
                     <input id="name"
-                           name="username"
+                           name="name"
                            type="text"
                            class="form-control"
                            placeholder="Username"
