--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
             <li class="dropdown">
                 <a href="#adventures" class="dropdown-toggle">Adventures</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#races">Races</a></li>
+                    <li><a th:href="@{/races}" th:classappend="${activeLink == 'races'}? 'activeLink'">Races</a></li>
                     <li><a href="#classes">Classes</a></li>
                     <li><a href="#spells">Spells</a></li>
                     <li><a href="#items">Items</a></li>
