--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,13 +16,13 @@
 <main class="hero">
   <h2 class="text-center text-white">Register User</h2>
   <div class="form-center">
-    <form th:method="post" th:action="@{/users/register}" th:object="${registerData}" class="form mx-auto">
-      <div class="form-group mb-3">
+    <form th:method="post" th:action="@{/users/register}" th:object="${registerData}" class="form">
+      <div class="form-group">
         <label th:for="name" class="text-white font-bold">Username:</label>
         <input th:field="*{name}" type="text" class="form-control" placeholder="Username"/>
         <!-- <p class="error alert alert-danger">First name is required.</p> -->
       </div>
-      <div class="form-group mb-3">
+      <div class="form-group">
         <label th:for="password" class="text-white font-bold">Password:</label>
         <input th:field="*{password}" type="password" class="form-control" placeholder="Password"/>
         <!-- <p class="error alert alert-danger">Password is required.</p> -->
